--- a/xmobar/.xmobarrc
+++ b/xmobar/.xmobarrc
@@ -3,8 +3,8 @@ Config {
    -- appearance
      font =         "xft:Dejavu Sans Mono:Bold:size=10:bold:antialias=true"
    , additionalFonts = ["xft:Font Awesome:size=9:antialias=true"]
-   , bgColor =      "black"
-   , fgColor =      "white"
+   , bgColor =      "#1A1829"
+   , fgColor =      "#ac9b9d"
    , position =     TopSize C 100 25
    -- , border =       BottomB
    -- , borderColor =  "#646464"
@@ -44,22 +44,24 @@ Config {
                              ] 36000
 
         -- network activity monitor (dynamic interface resolution)
-        , Run DynNetwork     [ "--template" , "<fn=1>\xf0ac</fn> <tx>/<rx>"
-                             , "--Low"      , "1000"       -- units: kB/s
-                             , "--High"     , "5000"       -- units: kB/s
-                             , "--low"      , "darkgreen"
-                             , "--normal"   , "darkorange"
-                             , "--high"     , "darkred"
+        -- , Run DynNetwork     [ "--template" , "<fn=1>\xf0ac</fn> <tx>/<rx>"
+        , Run DynNetwork     [ "--template" , "<fc=#84305E><fn=1>\xf0ac</fn></fc> <tx>/<rx>"
+        --                     , "--Low"      , "1000"       -- units: kB/s
+        --                     , "--High"     , "5000"       -- units: kB/s
+        --                     , "--low"      , "darkgreen"
+        --                     , "--normal"   , "darkorange"
+        --                     , "--high"     , "darkred"
                              , "-w"         , "3"
                              ] 10
 
         -- cpu activity monitor
-        , Run MultiCpu       [ "--template" , "<fn=1>\xf108</fn> <total0>/<total1>"
-                             , "--Low"      , "50"         -- units: %
-                             , "--High"     , "85"         -- units: %
-                             , "--low"      , "darkgreen"
-                             , "--normal"   , "darkorange"
-                             , "--high"     , "darkred"
+        -- , Run MultiCpu       [ "--template" , "<fn=1>\xf108</fn> <total0>/<total1>"
+        , Run MultiCpu       [ "--template" , "<fc=#84305E><fn=1>\xf108</fn></fc> <total0>"
+        --                     , "--Low"      , "50"         -- units: %
+        --                     , "--High"     , "85"         -- units: %
+        --                     , "--low"      , "darkgreen"
+        --                     , "--normal"   , "darkorange"
+        --                     , "--high"     , "darkred"
                              , "-w"         , "2"
                              ] 10
 
@@ -73,12 +75,13 @@ Config {
                              ] 50
 
         -- memory usage monitor
-        , Run Memory         [ "--template" ,"<fn=1>\xf2db</fn> <usedratio>"
-                             , "--Low"      , "20"        -- units: %
-                             , "--High"     , "90"        -- units: %
-                             , "--low"      , "darkgreen"
-                             , "--normal"   , "darkorange"
-                             , "--high"     , "darkred"
+        -- , Run Memory         [ "--template" ,"<fn=1>\xf2db</fn> <usedratio>"
+        , Run Memory         [ "--template" ,"<fc=#84305E><fn=1>\xf2db</fn></fc> <usedratio>"
+        --                     , "--Low"      , "20"        -- units: %
+        --                     , "--High"     , "90"        -- units: %
+        --                     , "--low"      , "darkgreen"
+        --                     , "--normal"   , "darkorange"
+        --                     , "--high"     , "darkred"
                              ] 10
 
         -- battery monitor
@@ -101,7 +104,7 @@ Config {
         -- time and date indicator
         --   (%F = y-m-d date, %a = day of week, %T = h:m:s time)
         -- , Run Date           "<fc=#ABABAB>%F (%a) %T</fc>" "date" 10
-        , Run Date           "<fn=1>\xf133</fn> %a, %d %B %H:%M" "date" 100
+        , Run Date           "<fc=#84305E><fn=1>\xf133</fn></fc> %a, %d %B %H:%M" "date" 100
 
         -- keyboard layout indicator
         , Run Kbd            [ ("us(dvorak)" , "<fc=#00008B>DV</fc>")
