--- a/rofi/.config/rofi/config
+++ b/rofi/.config/rofi/config
@@ -3,24 +3,23 @@
 ! ------------------------------------------------------------------------------
 
 ! General
-rofi.font:                DejaVu Sans Mono 10
+rofi.font:                DejaVu Sans Mono 9
 rofi.fake-transparency:   true
 rofi.hide-scrollbar:      true
-
 
 ! Layout
 rofi.width:              25
 rofi.column:             4
 rofi.location:           0
 rofi.lines:              8
-rofi.padding:            50
+rofi.padding:            30
 rofi.sidebar-mode:       false
 rofi.fullscreen:         false
 
 ! ------------------------------------------------------------------------------
 !                      ROFI Color theme
 ! ------------------------------------------------------------------------------
-rofi.color-window: #1d2120, #1d2120, #458588
-rofi.color-normal: #1d2120, #ebdbb2, #1d2120, #458588, #1d2120
-rofi.color-active: #1d2120, #ebdbb2, #1d2120, #458588, #1d2120
-rofi.color-urgent: #1d2120, #69584E, #1d2120, #69584E, #ebdbb2
+rofi.color-window: #2e3440, #2e3440, #81a1c1
+rofi.color-normal: #2e3440, #d8dee9, #2e3440, #81a1c1, #2e3440
+rofi.color-active: #2e3440, #d8dee9, #2e3440, #81a1c1, #2e3440
+rofi.color-urgent: #2e3440, #69584E, #2e3440, #69584E, #d8dee9
