--- a/xmonad/.xmobarrc
+++ b/xmonad/.xmobarrc
@@ -1,11 +1,11 @@
 Config {
 
    -- appearance
-     font =         "xft:Operator Mono SSm:Bold:size=11:bold:antialias=true"
+     font =         "xft:Lucida Grande:Bold:size=11:bold:antialias=true, Noto Sans CJK KR:size=11:antialias=true"
    , additionalFonts = ["xft:Font Awesome:size=11:antialias=true"]
    , bgColor =      "#2E3440"
    , fgColor =      "#ECEFF4"
-   , position =     TopSize C 100 25
+   , position =     BottomSize C 100 25
    -- , border =       BottomB
    -- , borderColor =  "#646464"
 
